# bithumb_jhsun

./: .env.example  .gitignore  AI_IMPLEMENTATION_GUIDE.md  README.md  main.py  pyproject.toml  sync_coins.py
app/: main.py
app/api/routes/: ai_optimizer.py  analytics.py  auth.py  web.py
app/core/: config.py  database.py  logging_config.py  security.py
app/models/: coin.py  database.py  user.py
app/schemas/: trading.py  user.py
app/services/: anomaly_detector.py  backtesting.py  bithumb_api.py  coin_sync.py  parameter_optimizer.py  scheduler.py  strategy.py  trading_engine.py
app/static/: manifest.json
app/templates/: admin_users.html  base.html  dashboard.html  index.html  login.html  pending_approval.html  profile.html  register.html  strategy.html  strategy_logs.html
app/utils/: helpers.py
examples/: anomaly_detection_example.py  optimize_strategy_example.py
